@@ -46,9 +46,6 @@ import static com.nextbreakpoint.freeimage4java.Libfreeimage.FreeImage_Unload;
 import static com.nextbreakpoint.freeimage4java.Libfreeimage.TRUE;
 import static java.lang.foreign.MemorySegment.NULL;
 
-/**
- * @author Andrea Medeghini
- */
 @Log
 public abstract class AbstractImageEncoder implements Encoder {
 	private EncoderDelegate delegate;
@@ -79,7 +76,7 @@ public abstract class AbstractImageEncoder implements Encoder {
 	}
 
 	@Override
-	public void encode(EncoderHandle handle, int frame, int count) throws EncoderException {
+	public void encode(EncoderHandle handle, int frameIndex, int repeatFrameCount, int totalFrameCount) throws EncoderException {
 		((ImageEncoderHandle) handle).encode();
 	}
 
@@ -105,9 +102,7 @@ public abstract class AbstractImageEncoder implements Encoder {
 			if (delegate != null) {
 				delegate.didProgressChanged(0f);
 			}
-			if (log.isLoggable(Level.FINE)) {
-				log.fine("Encoding image...");
-			}
+			log.info("Session %s: Encoding image...".formatted(context.getSessionId()));
 		}
 
 		public void encode() throws EncoderException {
@@ -136,8 +131,11 @@ public abstract class AbstractImageEncoder implements Encoder {
 								break;
 							}
 						}
+						if (y % 100 == 0) {
+							log.info("Session %s: Completed %.0f%%".formatted(context.getSessionId(), ((y + 1f) / context.getImageHeight()) * 100f));
+						}
 						if (delegate != null && (y % 10 == 0)) {
-							delegate.didProgressChanged((context.getImageHeight() * 100f) / (y + 1f));
+							delegate.didProgressChanged(((y + 1f) / context.getImageHeight()) * 100f);
 						}
 						Thread.yield();
 					}
@@ -145,15 +143,17 @@ public abstract class AbstractImageEncoder implements Encoder {
 						final var fileName = arena.allocateFrom(path.getAbsolutePath());
 						FreeImage_Save(getFormat(), pBitmap, fileName, 0);
 						time = System.currentTimeMillis() - time;
-						if (log.isLoggable(Level.INFO)) {
-							log.info("Image exported: elapsed time " + String.format("%3.2f", time / 1000.0d) + "s");
-						}
+						log.info("Session %s: Completed %.0f%%".formatted(context.getSessionId(), 100f));
 						if (delegate != null) {
 							delegate.didProgressChanged(100f);
+						}
+						if (log.isLoggable(Level.INFO)) {
+							log.info("Session %s: Image exported (total time %3.2fs)".formatted(context.getSessionId(), time / 1000.0d));
 						}
 					}
 				}
 				catch (final Exception e) {
+					log.log(Level.WARNING, "Session %s: Failed to encode image".formatted(context.getSessionId()), e);
 					throw new EncoderException("Failed to encode image", e);
 				}
 				finally {
